[package]
name = "lorem-ipsumlike"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["davehorner"]
description = "A lightweight Rust toolkit for generating, injecting, and filtering Lorem Ipsum-like filler content from real text."
keywords = ["lorem", "ipsum", "text-cleaning", "text-generation", "nlp", "filtering"]

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.34", features = ["derive"] }
rand = "0.9.0"
spellcheck = "0.1.2"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
